have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `gui/sitemap`: list and zoom to nearby people, locations, and artifacts
- `devel/tree-info`: print a visualization of tree_info data

## New Features

## Fixes
- `item`: don't match uncollected spider webs when you search for "silk"
- `assign-profile`: fix handling of unit option for setting target unit id

## Misc Improvements
- `gui/gm-unit`: correctly display skill levels above Legendary+5
- `gui/unit-info-viewer`: now displays a unit's weight, relative to either dwarves, elephants or cats
- `gui/unit-info-viewer`: shows a unit's relative size to its race's average.

## Removed

# 50.13-r2

## New Tools
- Updated for adventure mode: `gui/sandbox`, `gui/create-item`, `gui/reveal`
- `ghostly`: (reinstated) allow your adventurer to phase through walls
- `markdown`: (reinstated) export description of selected unit or item to a text file
- `adaptation`: (reinstated) inspect or set unit cave adaptation levels
- `fix/engravings`: fix corrupt engraving tiles
- `unretire-anyone`: (reinstated) choose anybody in the world as an adventurer
- `reveal-adv-map`: (reinstated) reveal (or hide) the adventure map
- `resurrect-adv`: (reinstated) allow your adventurer to recover from death
- `flashstep`: (reinstated) teleport your adventurer to the mouse cursor

## New Features
- `instruments`: new subcommand ``instruments order`` for creating instrument work orders

## Fixes
- `modtools/create-item`: now functions properly when the ``reaction-gloves`` tweak is active
- `quickfort`: don't designate multiple tiles of the same tree for chopping when applying a tree chopping blueprint to a multi-tile tree
- `gui/quantum`: fix processing when creating a quantum dump instead of a quantum stockpile