@@ -31,6 +31,7 @@ Template for new versions:
 - `devel/tree-info`: print a visualization of tree_info data
 
 ## New Features
+- `buildingplan`: dimension tooltip is now displayed for constructions and buildings that are designated over an area
 
 ## Fixes
 - `item`: don't match uncollected spider webs when you search for "silk"
